2007-05-30  Edward Hervey  <edward@fluendo.com>

	* po/ar.po:
	* po/ca.po:
	* po/de.po:
	* po/dz.po:
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fi.po:
	* po/fr.po:
	* po/it.po:
	* po/pa.po:
	* po/pt_BR.po:
	* po/sv.po:
	* po/zh_CN.po:
	Update translations.

2007-05-28  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.2.2 pre-release

2007-05-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/source.py:
	New TimelineBlankSource for audio/video blanks.
	* pitivi/ui/timelineobjects.py:
	When adding a video-only clip to the timeline, link a blank audio
	brother to it to avoid issues.
	Fixes #441784

2007-05-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/smartscale.py:
	Always set the pixel-aspect-ratio on the intermediate capsfilter to
	handle video streams that don't specify the PAR (which in that case
	defaults to 1/1).

2007-05-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Set the proper title and heading on dialog box depending on whether
	there is one OR more files that failed.

2007-05-12  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/filelisterrordialog.py:
	more cleanup
	* pitivi/ui/sourcefactories.py:
	Emit signal so InfoStub can be properly removed.

2007-05-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/filelisterrordialog.py:
	First try at using gtk.TextView for error information.

2007-05-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	* pitivi/ui/filelisterrordialog.py:
	* pitivi/ui/sourcefactories.py:
	Use the extra information field for 'not-media-file' signals.
	UI cleanups will follow soon.

2007-05-07  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	Sort files from folders when receiving dropped uris.

2007-05-01  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	* pitivi/threads.py:
	* pitivi/pitivi.py:
	Threading convenience class and class to manage all threads in
	existence during runtime.
	* pitivi/sourcelist.py: