@@ -10,6 +10,10 @@ Christophe Sauthier <christophe.sauthier@gmail.com> (i18n)
 Laszlo Pandy <laszlok2@gmail.com> (UI)
 Ernst Persson  <ernstp@gmail.com> (UI)
 Richard Boulton <richard@tartarus.org>
+Thibaut Girka <thibaut.girka@free.fr> (UI)
+Jeff Fortin <nekohayo@gmail.com> (UI)
+Johan Dahlin <jdahlin@async.com.br> (UI)
+Brandon Lewis <brandon_lewis@berkeley.edu> (UI)
 
 ==================================================
 
